--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Phone hunter</title>
 </head>
 <body>
-    
+    <h1>Phone Seeker</h1>
+
+
+
+    <script src="js/script.js"></script>
 </body>
 </html>
