--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
 <!-- bootstrap css -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <!-- external css -->
+<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1 class=" container text-center">Phone Seeker</h1>
+    <h1 class=" container head-bg text-center">Phone Seeker</h1>
 <!-- search button -->
 <div class="container input-group mb-3 mx-auto w-50">
-    <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="button-addon2">
-    <button class="btn btn-outline-secondary " type="button" id="button-addon2">Button</button>
+    <input id="search-id" type="text" class="input-bg form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="button-addon2">
+    <button class="btn btn-outline-secondary btn-bg" type="button" id="button-addon2">Button</button>
   </div>
 
 
