added input value and fetch url

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 <!-- search button -->
 <div class="container input-group mb-3 mx-auto w-50">
     <input id="search-id" type="text" class="input-bg form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="button-addon2">
-    <button class="btn btn-outline-secondary btn-bg" type="button" id="button-addon2">Button</button>
+    <button onclick="loadPhone()" class="btn btn-outline-secondary btn-bg" type="button" id="button-addon2">Button</button>
   </div>
-
+<!--Show  search result -->
 
 
 
