added display result

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
     <button onclick="loadPhone()" class="btn btn-outline-secondary btn-bg" type="button" id="button-addon2">Button</button>
   </div>
 <!--Show  search result -->
+<div id="search-result" class="row row-cols-1 row-cols-md-3 container g-4  ms-5 mt-5">
+    
 
+  </div>
 
 
 
