added details but not working

--- a/index.html
+++ b/index.html
@@ -15,16 +15,17 @@
 <!-- search button -->
 <div class="container input-group mb-3 mx-auto w-50">
     <input id="search-id" type="text" class="input-bg form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="button-addon2">
-    <button onclick="loadPhone()" class="btn btn-outline-secondary btn-bg" type="button" id="button-addon2">Button</button>
+    <button onclick="loadPhone()" class="btn  btn-bg" type="button" id="button-addon2">Button</button>
   </div>
 <!--Show  search result -->
 <div id="search-result" class="row row-cols-1 row-cols-md-3 container g-4  ms-5 mt-5">
-    
-
   </div>
 
+  <!-- details result -->
 
-
+  <div id="detail-result" class="card mx-auto" style="width: 18rem;">
+   
+  </div>
 
 
 
