--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Phone hunter</title>
+    <title>Phone seeker</title>
 <!-- bootstrap css -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <!-- external css -->
@@ -13,19 +13,35 @@
 <body>
     <h1 class=" container head-bg text-center">Phone Seeker</h1>
 <!-- search button -->
+
+
+
+
 <div class="container input-group mb-3 mx-auto w-50">
     <input id="search-id" type="text" class="input-bg form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="button-addon2">
     <button onclick="loadPhone()" class="btn  btn-bg" type="button" id="button-addon2">Button</button>
   </div>
+
+
+ <!-- details result -->
+
+ <!-- <div id="detail-result" class="card mb-3" style="max-width: 540px;">
+  <div class="row g-0">
+    </div>
+</div> -->
+<div  id="detail-result" class="card mb-3 mx-auto "  style="max-width: 840px;">
+
+</div>
+
 <!--Show  search result -->
-<div id="search-result" class="row row-cols-1 row-cols-md-3 container g-4  ms-5 mt-5">
+<div id="search-result" class="row row-cols-1 row-cols-md-3 container  mx-auto g-4  ms-6 mt-5"  style="max-width: 840px;">
   </div>
 
-  <!-- details result -->
 
-  <div id="detail-result" class="card mx-auto" style="width: 18rem;">
-   
-  </div>
+
+
+
+ 
 
 
 
