--- a/index.html
+++ b/index.html
@@ -18,25 +18,19 @@
 
 
 <div class="container input-group mb-3 mx-auto w-50">
-    <input id="search-id" type="text" class="input-bg form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="button-addon2">
-    <button onclick="loadPhone()" class="btn  btn-bg" type="button" id="button-addon2">Button</button>
+    <input id="search-id" type="text" class="input-bg form-control mt-4" placeholder="Search your phone" aria-label="Recipient's username" aria-describedby="button-addon2">
+    <button onclick="loadPhone()" class="btn  btn-bg mt-4" type="button" id="button-addon2">Button</button>
   </div>
 
 
  <!-- details result -->
-
- <!-- <div id="detail-result" class="card mb-3" style="max-width: 540px;">
-  <div class="row g-0">
-    </div>
-</div> -->
-<div  id="detail-result" class="card mb-3 mx-auto "  style="max-width: 840px;">
-
+<div  id="detail-result" class="search-bg mb-3 mx-auto "  style="max-width: 740px;">
 </div>
 
 <!--Show  search result -->
-<div id="search-result" class="row row-cols-1 row-cols-md-3 container  mx-auto g-4  ms-6 mt-5"  style="max-width: 840px;">
-  </div>
 
+<div id="search-result" class="row row-cols-1 search-bg row-cols-md-3 container  mx-auto g-4  ms-6 my-5  "  style="max-width: 840px;">
+</div>
 
 
 
