--- a/index.html
+++ b/index.html
@@ -21,14 +21,18 @@
     <input id="search-id" type="text" class="input-bg form-control mt-4" placeholder="Search your phone" aria-label="Recipient's username" aria-describedby="button-addon2">
     <button onclick="loadPhone()" class="btn  btn-bg mt-4" type="button" id="button-addon2">Button</button>
   </div>
-
+<!-- spinner -->
+<div id="spinner" class="text-center">
+  <div class="spinner-border" role="status">
+    <span class="visually-hidden">Loading...</span>
+  </div>
+</div>
 
  <!-- details result -->
-<div  id="detail-result" class="search-bg mb-3 mx-auto "  style="max-width: 740px;">
+<div  id="detail-result" class=" search-bg mb-3 mx-auto "  style="max-width: 740px;">
 </div>
 
 <!--Show  search result -->
-
 <div id="search-result" class="row row-cols-1 search-bg row-cols-md-3 container  mx-auto g-4  ms-6 my-5  "  style="max-width: 840px;">
 </div>
 
