--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <div class="container input-group mb-3 mx-auto w-50">
     <input id="search-id" type="text" class="input-bg form-control mt-4" placeholder="Search your phone" aria-label="Recipient's username" aria-describedby="button-addon2">
-    <button onclick="loadPhone()" class="btn  btn-bg mt-4" type="button" id="button-addon2">Button</button>
+    <button onclick="loadPhone()" class="btn fs-5  btn-bg mt-4" type="button" id="button-addon2">Search</button>
   </div>
 <!-- spinner -->
 <div id="spinner" class="text-center">
