--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <!-- external css -->
 <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body class="container">
     <h1 class=" container head-bg text-center">Phone Seeker</h1>
 <!-- search button -->
 
@@ -27,6 +27,16 @@
     <span class="visually-hidden">Loading...</span>
   </div>
 </div>
+
+<!-- error message -->
+<div>
+  <h1 id="error-message" class="text-danger text-center error-handle">Error!!! Please Enter valid Input and Try again.</h1>
+</div>
+
+<!-- 
+<div>
+  <h1 id="error" class="text-danger text-center ">Input  Please input something.</h1>
+</div> -->
 
  <!-- details result -->
 <div  id="detail-result" class=" search-bg mb-3 mx-auto "  style="max-width: 740px;">
