--- a/index.html
+++ b/index.html
@@ -33,18 +33,15 @@
   <h1 id="error-message" class="text-danger text-center error-handle">Error!!! Please Enter valid Input and Try again.</h1>
 </div>
 
-<!-- 
-<div>
-  <h1 id="error" class="text-danger text-center ">Input  Please input something.</h1>
-</div> -->
+
 
  <!-- details result -->
-<div  id="detail-result" class=" search-bg mb-3 mx-auto "  style="max-width: 740px;">
+<div  id="detail-result" class="rounded search-bg mb-3 mx-auto "  style="max-width: 740px;">
 </div>
 
 <!--Show  search result -->
-<div id="search-result" class="row row-cols-1 search-bg row-cols-md-3 container  mx-auto g-4  ms-6 my-5  "  style="max-width: 840px;">
-</div>
+<div id="search-result" class="row row-cols-1 search-bg row-cols-md-3 container  mx-auto g-4  ms-6 my-5 rounded"  style="max-width: 840px;">
+ </div>
 
 
 
