--- a/index.html
+++ b/index.html
@@ -10,17 +10,18 @@
 <!-- external css -->
 <link rel="stylesheet" href="css/style.css">
 </head>
+
+<!-- body -->
 <body class="container">
     <h1 class=" container head-bg text-center">Phone Seeker</h1>
+
 <!-- search button -->
-
-
-
 
 <div class="container input-group mb-3 mx-auto w-75">
     <input id="search-id" type="text" class="input-bg form-control mt-4" placeholder="Search your phone" aria-label="Recipient's username" aria-describedby="button-addon2">
     <button onclick="loadPhone()" class="btn fs-5  btn-bg mt-4" type="button" id="button-addon2">Search</button>
   </div>
+
 <!-- spinner -->
 <div id="spinner" class="text-center">
   <div class="spinner-border" role="status">
@@ -47,7 +48,6 @@
 
 
  
-
 
 
 <!-- bootstrap js -->
